# KnotenWerk

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
